[package]
name = "modem_updater"
version = "0.1.0"
authors = ["Jared Wolff <jared@circuitdojo.com>"]
description = "Utility for updating nRF91 modem firmware"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bin_file = "0.1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
probe-rs = "0.29"
regex = "1.11"
tempfile = "3.22"
zip = "2.4"
thiserror = "2.0"
